Only automatically promote sticky position elements which move with scroll.

BUG=696058
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2776563003
Cr-Commit-Position: refs/heads/master@{#461457}

Former-commit-id: b445984eba859a4e3febed02d619776e4afd3dff